# neutron-os-core

./: .agent_instructions.md  .gitignore  .gitlab-ci.yml  .mcp.json  CLAUDE.md  CONTRIBUTING.md  DIR_INTENTS.md  README.md  neut.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
.neut/publisher/: workflow.yaml
blockchain/: README.md
cost_estimation_tool/: __init__.py
data/dbt/: dbt_project.yml
docs/: README.md  glossary.md  merge-scenario-guide.md
docs/_archive/: README.md
docs/_tools/: README.md  README_QUALITY.md  check_and_fix_docs.sh  doc_quality_checker.py  doc_quality_ci.py  generate_all_docs.py  md_to_docx.py  pdf_to_text.py
docs/adr/: 001-polyglot-monorepo-bazel.docx  002-hyperledger-fabric-multi-facility.docx  003-lakehouse-iceberg-duckdb-superset.docx  004-infrastructure-terraform-k8s-helm.docx  005-meeting-intake-pipeline.docx  006-mcp-server-agentic-access.md  009-promote-media-internalize-db.md  README.md
docs/analysis/: COST-SIZING-ORGANIZATION.md  Neutron_OS_Architecture_Impact.md  PRD_Change_Summary.md  README.md  Sm153_Executive_Summary.md  Sm153_Five_Whys_Draft.md  Sm153_Incident_Analysis_PRD_Implications.md
docs/design/: sense-health-monitoring-plan.md
docs/guides/: demo-model-corral.md  first-day-openmc-install.md  quickstart-model-corral.md
docs/legal/: README.md  open-source-disclosure-guide.md
docs/playbooks/: rascal-upgrade.md
docs/prd/: .docflow.json  .mermaid-style-guide.md  README.docx  README.md  agent-state-management-prd.md  compliance-tracking-prd.docx  compliance-tracking-prd.md  data-platform-prd.md  experiment-manager-prd.docx  experiment-manager-prd.md  media-library-prd.md  medical-isotope-prd.docx  medical-isotope-prd.md  neut-cli-prd.md  neutron-os-executive-prd.docx  neutron-os-executive-prd.md  reactor-ops-log-prd.md  scheduling-system-prd.docx  scheduling-system-prd.md
docs/requirements/: adr-006-mcp-agentic-access.md  adr_009-promote-media-internalize-db.md  execution-plan-2026.md  prd-agents.md  prd-connections.md  prd-digital-twin-hosting.md  prd-executive.md  prd-intelligence-amplification.md  prd-model-corral.md  prd-neut-cli.md  prd-okrs-2026.md  prd-security-identity-credentials.md  prd-security.md  prd-teaching-with-ai.md  prd_agent-state-management.md  prd_analytics-dashboards.md  prd_compliance-tracking.md  prd_data-platform.md  prd_experiment-manager.md  prd_intelligence-amplification-pillar.md  prd_media-library.md  prd_neut-cli.md  prd_neutron-os-agents.md  prd_publisher.md  prd_reactor-ops-log.md  prd_scheduling-system.md  prd_security-access-control.md
docs/research/: deeplynx-assessment.md  (+4 more)
frontend/: README.md
infra/: README.md
plugins/: README.md
scripts/: bootstrap.sh  install.sh  push-public.sh  split-codebase.sh  upgrade-rascal.sh
services/: README.md
tests/: conftest.py  test_mirror_linkage.py  test_repo_hygiene.py
tools/: README.md  cli_registry.py  gitlab_tracker_export.py  neut_cli.py  run_gitlab_export.sh  test_gitlab_tracker_export.py
(+715 files in other folders)
